--- a/Langchain_pdf_reader.ipynb
+++ b/Langchain_pdf_reader.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO6ZyJGRDZgsZB6QrNo0qqU",
+      "authorship_tag": "ABX9TyNHYLpNsf3Lp7w/RAhuLaxn",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,13 +28,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "S0Q6cOQKBwRu",
-        "outputId": "7e78619c-a1e6-4d57-94ca-5852f6fffd1f"
+        "outputId": "cc2fef0b-a628-4734-9df4-4ce5a5463648"
       },
       "outputs": [
         {
@@ -87,7 +87,7 @@
             "Requirement already satisfied: pyrsistent!=0.17.0,!=0.17.1,!=0.17.2,>=0.14.0 in /usr/local/lib/python3.10/dist-packages (from jsonschema>=3.0->altair<6,>=4.0->streamlit) (0.19.3)\n",
             "Requirement already satisfied: mdurl~=0.1 in /usr/local/lib/python3.10/dist-packages (from markdown-it-py>=2.2.0->rich<14,>=10.14.0->streamlit) (0.1.2)\n",
             "Requirement already satisfied: tzdata in /usr/local/lib/python3.10/dist-packages (from pytz-deprecation-shim->tzlocal<5,>=1.1->streamlit) (2023.3)\n",
-            "Requirement already satisfied: langchain in /usr/local/lib/python3.10/dist-packages (0.0.253)\n",
+            "Requirement already satisfied: langchain in /usr/local/lib/python3.10/dist-packages (0.0.254)\n",
             "Requirement already satisfied: PyYAML>=5.3 in /usr/local/lib/python3.10/dist-packages (from langchain) (6.0.1)\n",
             "Requirement already satisfied: SQLAlchemy<3,>=1.4 in /usr/local/lib/python3.10/dist-packages (from langchain) (2.0.19)\n",
             "Requirement already satisfied: aiohttp<4.0.0,>=3.8.3 in /usr/local/lib/python3.10/dist-packages (from langchain) (3.8.5)\n",
@@ -142,7 +142,29 @@
             "Requirement already satisfied: charset-normalizer~=2.0.0 in /usr/local/lib/python3.10/dist-packages (from requests<3.0.0,>=2.23.0->deep_translator) (2.0.12)\n",
             "Requirement already satisfied: idna<4,>=2.5 in /usr/local/lib/python3.10/dist-packages (from requests<3.0.0,>=2.23.0->deep_translator) (3.4)\n",
             "Requirement already satisfied: python-dotenv in /usr/local/lib/python3.10/dist-packages (1.0.0)\n",
-            "Requirement already satisfied: python-dotenv in /usr/local/lib/python3.10/dist-packages (1.0.0)\n"
+            "Requirement already satisfied: openai in /usr/local/lib/python3.10/dist-packages (0.27.8)\n",
+            "Requirement already satisfied: requests>=2.20 in /usr/local/lib/python3.10/dist-packages (from openai) (2.27.1)\n",
+            "Requirement already satisfied: tqdm in /usr/local/lib/python3.10/dist-packages (from openai) (4.65.0)\n",
+            "Requirement already satisfied: aiohttp in /usr/local/lib/python3.10/dist-packages (from openai) (3.8.5)\n",
+            "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /usr/local/lib/python3.10/dist-packages (from requests>=2.20->openai) (1.26.16)\n",
+            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.10/dist-packages (from requests>=2.20->openai) (2023.7.22)\n",
+            "Requirement already satisfied: charset-normalizer~=2.0.0 in /usr/local/lib/python3.10/dist-packages (from requests>=2.20->openai) (2.0.12)\n",
+            "Requirement already satisfied: idna<4,>=2.5 in /usr/local/lib/python3.10/dist-packages (from requests>=2.20->openai) (3.4)\n",
+            "Requirement already satisfied: attrs>=17.3.0 in /usr/local/lib/python3.10/dist-packages (from aiohttp->openai) (23.1.0)\n",
+            "Requirement already satisfied: multidict<7.0,>=4.5 in /usr/local/lib/python3.10/dist-packages (from aiohttp->openai) (6.0.4)\n",
+            "Requirement already satisfied: async-timeout<5.0,>=4.0.0a3 in /usr/local/lib/python3.10/dist-packages (from aiohttp->openai) (4.0.2)\n",
+            "Requirement already satisfied: yarl<2.0,>=1.0 in /usr/local/lib/python3.10/dist-packages (from aiohttp->openai) (1.9.2)\n",
+            "Requirement already satisfied: frozenlist>=1.1.1 in /usr/local/lib/python3.10/dist-packages (from aiohttp->openai) (1.4.0)\n",
+            "Requirement already satisfied: aiosignal>=1.1.2 in /usr/local/lib/python3.10/dist-packages (from aiohttp->openai) (1.3.1)\n",
+            "Requirement already satisfied: tiktoken in /usr/local/lib/python3.10/dist-packages (0.4.0)\n",
+            "Requirement already satisfied: regex>=2022.1.18 in /usr/local/lib/python3.10/dist-packages (from tiktoken) (2022.10.31)\n",
+            "Requirement already satisfied: requests>=2.26.0 in /usr/local/lib/python3.10/dist-packages (from tiktoken) (2.27.1)\n",
+            "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /usr/local/lib/python3.10/dist-packages (from requests>=2.26.0->tiktoken) (1.26.16)\n",
+            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.10/dist-packages (from requests>=2.26.0->tiktoken) (2023.7.22)\n",
+            "Requirement already satisfied: charset-normalizer~=2.0.0 in /usr/local/lib/python3.10/dist-packages (from requests>=2.26.0->tiktoken) (2.0.12)\n",
+            "Requirement already satisfied: idna<4,>=2.5 in /usr/local/lib/python3.10/dist-packages (from requests>=2.26.0->tiktoken) (3.4)\n",
+            "Requirement already satisfied: python-dotenv in /usr/local/lib/python3.10/dist-packages (1.0.0)\n",
+            "35.245.60.48\n"
           ]
         }
       ],
@@ -153,6 +175,8 @@
         "!pip install  PyPDF2\n",
         "!pip install  deep_translator\n",
         "!pip install python-dotenv\n",
+        "!pip install openai\n",
+        "!pip install tiktoken\n",
         "import streamlit as st\n",
         "from langchain.llms import OpenAI\n",
         "from langchain.text_splitter import CharacterTextSplitter\n",
@@ -162,7 +186,7 @@
         "import os\n",
         "!pip install python-dotenv\n",
         "from dotenv import load_dotenv\n",
-        "\n",
+        "!wget -q -O - ipv4.icanhazip.com\n",
         "\n",
         "from PyPDF2 import PdfReader\n",
         "from deep_translator import GoogleTranslator\n",
@@ -216,30 +240,82 @@
     },
     {
       "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "gZJV90xkXTWk"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "a9A4syLeXTm0"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
       "source": [
-        "# New Section"
+        "! streamlit run app.py & npx localtunnel --port 8501"
       ],
       "metadata": {
-        "id": "BzNp6M3eUGow"
-      }
+        "id": "4Sq2PZmjW_Eb",
+        "outputId": "e93be91b-deaa-4574-e319-c6ce39f86923",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[##................] - fetchMetadata: sill resolveWithNewModule is-fullwidth-co\u001b[0m\u001b[K\n",
+            "Collecting usage statistics. To deactivate, set browser.gatherUsageStats to False.\n",
+            "\u001b[0m\n",
+            "\u001b[0m\n",
+            "\u001b[34m\u001b[1m  You can now view your Streamlit app in your browser.\u001b[0m\n",
+            "\u001b[0m\n",
+            "\u001b[34m  Network URL: \u001b[0m\u001b[1mhttp://172.28.0.12:8501\u001b[0m\n",
+            "\u001b[34m  External URL: \u001b[0m\u001b[1mhttp://35.245.60.48:8501\u001b[0m\n",
+            "\u001b[0m\n",
+            "\u001b[K\u001b[?25hnpx: installed 22 in 2.342s\n",
+            "your url is: https://legal-yaks-bet.loca.lt\n",
+            "Retrying langchain.embeddings.openai.embed_with_retry.<locals>._embed_with_retry in 4.0 seconds as it raised RateLimitError: You exceeded your current quota, please check your plan and billing details..\n",
+            "Retrying langchain.embeddings.openai.embed_with_retry.<locals>._embed_with_retry in 4.0 seconds as it raised RateLimitError: You exceeded your current quota, please check your plan and billing details..\n",
+            "Retrying langchain.embeddings.openai.embed_with_retry.<locals>._embed_with_retry in 4.0 seconds as it raised RateLimitError: You exceeded your current quota, please check your plan and billing details..\n",
+            "Retrying langchain.embeddings.openai.embed_with_retry.<locals>._embed_with_retry in 8.0 seconds as it raised RateLimitError: You exceeded your current quota, please check your plan and billing details..\n",
+            "Retrying langchain.embeddings.openai.embed_with_retry.<locals>._embed_with_retry in 10.0 seconds as it raised RateLimitError: You exceeded your current quota, please check your plan and billing details..\n",
+            "2023-08-07 09:47:35.289 Uncaught app exception\n",
+            "Traceback (most recent call last):\n",
+            "  File \"/usr/local/lib/python3.10/dist-packages/streamlit/runtime/scriptrunner/script_runner.py\", line 552, in _run_script\n",
+            "    exec(code, module.__dict__)\n",
+            "  File \"/content/app.py\", line 53, in <module>\n",
+            "    knowladge_base = FAISS.from_texts(chunks ,embeddings )\n",
+            "  File \"/usr/local/lib/python3.10/dist-packages/langchain/vectorstores/faiss.py\", line 577, in from_texts\n",
+            "    embeddings = embedding.embed_documents(texts)\n",
+            "  File \"/usr/local/lib/python3.10/dist-packages/langchain/embeddings/openai.py\", line 472, in embed_documents\n",
+            "    return self._get_len_safe_embeddings(texts, engine=self.deployment)\n",
+            "  File \"/usr/local/lib/python3.10/dist-packages/langchain/embeddings/openai.py\", line 358, in _get_len_safe_embeddings\n",
+            "    response = embed_with_retry(\n",
+            "  File \"/usr/local/lib/python3.10/dist-packages/langchain/embeddings/openai.py\", line 107, in embed_with_retry\n",
+            "    return _embed_with_retry(**kwargs)\n",
+            "  File \"/usr/local/lib/python3.10/dist-packages/tenacity/__init__.py\", line 289, in wrapped_f\n",
+            "    return self(f, *args, **kw)\n",
+            "  File \"/usr/local/lib/python3.10/dist-packages/tenacity/__init__.py\", line 379, in __call__\n",
+            "    do = self.iter(retry_state=retry_state)\n",
+            "  File \"/usr/local/lib/python3.10/dist-packages/tenacity/__init__.py\", line 325, in iter\n",
+            "    raise retry_exc.reraise()\n",
+            "  File \"/usr/local/lib/python3.10/dist-packages/tenacity/__init__.py\", line 158, in reraise\n",
+            "    raise self.last_attempt.result()\n",
+            "  File \"/usr/lib/python3.10/concurrent/futures/_base.py\", line 451, in result\n",
+            "    return self.__get_result()\n",
+            "  File \"/usr/lib/python3.10/concurrent/futures/_base.py\", line 403, in __get_result\n",
+            "    raise self._exception\n",
+            "  File \"/usr/local/lib/python3.10/dist-packages/tenacity/__init__.py\", line 382, in __call__\n",
+            "    result = fn(*args, **kwargs)\n",
+            "  File \"/usr/local/lib/python3.10/dist-packages/langchain/embeddings/openai.py\", line 104, in _embed_with_retry\n",
+            "    response = embeddings.client.create(**kwargs)\n",
+            "  File \"/usr/local/lib/python3.10/dist-packages/openai/api_resources/embedding.py\", line 33, in create\n",
+            "    response = super().create(*args, **kwargs)\n",
+            "  File \"/usr/local/lib/python3.10/dist-packages/openai/api_resources/abstract/engine_api_resource.py\", line 153, in create\n",
+            "    response, _, api_key = requestor.request(\n",
+            "  File \"/usr/local/lib/python3.10/dist-packages/openai/api_requestor.py\", line 298, in request\n",
+            "    resp, got_stream = self._interpret_response(result, stream)\n",
+            "  File \"/usr/local/lib/python3.10/dist-packages/openai/api_requestor.py\", line 700, in _interpret_response\n",
+            "    self._interpret_response_line(\n",
+            "  File \"/usr/local/lib/python3.10/dist-packages/openai/api_requestor.py\", line 763, in _interpret_response_line\n",
+            "    raise self.handle_error_response(\n",
+            "openai.error.RateLimitError: You exceeded your current quota, please check your plan and billing details.\n"
+          ]
+        }
+      ]
     }
   ]
 }
