--- a/Langchain_pdf_reader.ipynb
+++ b/Langchain_pdf_reader.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNHYLpNsf3Lp7w/RAhuLaxn",
+      "authorship_tag": "ABX9TyPbDfk3h3wz7JVNvEt0jeTT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -177,6 +177,8 @@
         "!pip install python-dotenv\n",
         "!pip install openai\n",
         "!pip install tiktoken\n",
+        "!wget -q -O - ipv4.icanhazip.com\n",
+        "## create app.py\n",
         "import streamlit as st\n",
         "from langchain.llms import OpenAI\n",
         "from langchain.text_splitter import CharacterTextSplitter\n",
@@ -186,7 +188,7 @@
         "import os\n",
         "!pip install python-dotenv\n",
         "from dotenv import load_dotenv\n",
-        "!wget -q -O - ipv4.icanhazip.com\n",
+        "\n",
         "\n",
         "from PyPDF2 import PdfReader\n",
         "from deep_translator import GoogleTranslator\n",
@@ -235,7 +237,7 @@
         "        if language == \"Persian\":\n",
         "            response=GoogleTranslator(ource=\"en\", target = \"fa\").translate(response)\n",
         "        st.write(response)\n",
-        "!streamlit run Langchain_pdf_reader.py &>/content/logs.txt &\n"
+        "\n"
       ]
     },
     {
@@ -245,18 +247,21 @@
       ],
       "metadata": {
         "id": "4Sq2PZmjW_Eb",
-        "outputId": "e93be91b-deaa-4574-e319-c6ce39f86923",
+        "outputId": "0fa6d727-0b22-4c45-d05d-f47a09d730da",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
-          "output_type": "stream",
+          "metadata": {
+            "tags": null
+          },
           "name": "stdout",
+          "output_type": "stream",
           "text": [
-            "[##................] - fetchMetadata: sill resolveWithNewModule is-fullwidth-co\u001b[0m\u001b[K\n",
+            "\n",
             "Collecting usage statistics. To deactivate, set browser.gatherUsageStats to False.\n",
             "\u001b[0m\n",
             "\u001b[0m\n",
@@ -264,55 +269,7 @@
             "\u001b[0m\n",
             "\u001b[34m  Network URL: \u001b[0m\u001b[1mhttp://172.28.0.12:8501\u001b[0m\n",
             "\u001b[34m  External URL: \u001b[0m\u001b[1mhttp://35.245.60.48:8501\u001b[0m\n",
-            "\u001b[0m\n",
-            "\u001b[K\u001b[?25hnpx: installed 22 in 2.342s\n",
-            "your url is: https://legal-yaks-bet.loca.lt\n",
-            "Retrying langchain.embeddings.openai.embed_with_retry.<locals>._embed_with_retry in 4.0 seconds as it raised RateLimitError: You exceeded your current quota, please check your plan and billing details..\n",
-            "Retrying langchain.embeddings.openai.embed_with_retry.<locals>._embed_with_retry in 4.0 seconds as it raised RateLimitError: You exceeded your current quota, please check your plan and billing details..\n",
-            "Retrying langchain.embeddings.openai.embed_with_retry.<locals>._embed_with_retry in 4.0 seconds as it raised RateLimitError: You exceeded your current quota, please check your plan and billing details..\n",
-            "Retrying langchain.embeddings.openai.embed_with_retry.<locals>._embed_with_retry in 8.0 seconds as it raised RateLimitError: You exceeded your current quota, please check your plan and billing details..\n",
-            "Retrying langchain.embeddings.openai.embed_with_retry.<locals>._embed_with_retry in 10.0 seconds as it raised RateLimitError: You exceeded your current quota, please check your plan and billing details..\n",
-            "2023-08-07 09:47:35.289 Uncaught app exception\n",
-            "Traceback (most recent call last):\n",
-            "  File \"/usr/local/lib/python3.10/dist-packages/streamlit/runtime/scriptrunner/script_runner.py\", line 552, in _run_script\n",
-            "    exec(code, module.__dict__)\n",
-            "  File \"/content/app.py\", line 53, in <module>\n",
-            "    knowladge_base = FAISS.from_texts(chunks ,embeddings )\n",
-            "  File \"/usr/local/lib/python3.10/dist-packages/langchain/vectorstores/faiss.py\", line 577, in from_texts\n",
-            "    embeddings = embedding.embed_documents(texts)\n",
-            "  File \"/usr/local/lib/python3.10/dist-packages/langchain/embeddings/openai.py\", line 472, in embed_documents\n",
-            "    return self._get_len_safe_embeddings(texts, engine=self.deployment)\n",
-            "  File \"/usr/local/lib/python3.10/dist-packages/langchain/embeddings/openai.py\", line 358, in _get_len_safe_embeddings\n",
-            "    response = embed_with_retry(\n",
-            "  File \"/usr/local/lib/python3.10/dist-packages/langchain/embeddings/openai.py\", line 107, in embed_with_retry\n",
-            "    return _embed_with_retry(**kwargs)\n",
-            "  File \"/usr/local/lib/python3.10/dist-packages/tenacity/__init__.py\", line 289, in wrapped_f\n",
-            "    return self(f, *args, **kw)\n",
-            "  File \"/usr/local/lib/python3.10/dist-packages/tenacity/__init__.py\", line 379, in __call__\n",
-            "    do = self.iter(retry_state=retry_state)\n",
-            "  File \"/usr/local/lib/python3.10/dist-packages/tenacity/__init__.py\", line 325, in iter\n",
-            "    raise retry_exc.reraise()\n",
-            "  File \"/usr/local/lib/python3.10/dist-packages/tenacity/__init__.py\", line 158, in reraise\n",
-            "    raise self.last_attempt.result()\n",
-            "  File \"/usr/lib/python3.10/concurrent/futures/_base.py\", line 451, in result\n",
-            "    return self.__get_result()\n",
-            "  File \"/usr/lib/python3.10/concurrent/futures/_base.py\", line 403, in __get_result\n",
-            "    raise self._exception\n",
-            "  File \"/usr/local/lib/python3.10/dist-packages/tenacity/__init__.py\", line 382, in __call__\n",
-            "    result = fn(*args, **kwargs)\n",
-            "  File \"/usr/local/lib/python3.10/dist-packages/langchain/embeddings/openai.py\", line 104, in _embed_with_retry\n",
-            "    response = embeddings.client.create(**kwargs)\n",
-            "  File \"/usr/local/lib/python3.10/dist-packages/openai/api_resources/embedding.py\", line 33, in create\n",
-            "    response = super().create(*args, **kwargs)\n",
-            "  File \"/usr/local/lib/python3.10/dist-packages/openai/api_resources/abstract/engine_api_resource.py\", line 153, in create\n",
-            "    response, _, api_key = requestor.request(\n",
-            "  File \"/usr/local/lib/python3.10/dist-packages/openai/api_requestor.py\", line 298, in request\n",
-            "    resp, got_stream = self._interpret_response(result, stream)\n",
-            "  File \"/usr/local/lib/python3.10/dist-packages/openai/api_requestor.py\", line 700, in _interpret_response\n",
-            "    self._interpret_response_line(\n",
-            "  File \"/usr/local/lib/python3.10/dist-packages/openai/api_requestor.py\", line 763, in _interpret_response_line\n",
-            "    raise self.handle_error_response(\n",
-            "openai.error.RateLimitError: You exceeded your current quota, please check your plan and billing details.\n"
+            "\u001b[0m\n"
           ]
         }
       ]
